Save processing and displaying images into different files. Display matrix tables on th page!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-default.image.path=static/images/1.bmp
-thymeleaf.image.path=images/1.bmp
+default.image.path=static/images/Bit.bmp
+default.process.image.path=static/images/work.bmp
+thymeleaf.image.path=images/Bit.bmp
